fixed header text alignement

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h5 .language-ar,
 h6 .language-ar{font-family: 'Droid Arabic Kufi', serif;line-height:1.2;}
 body {padding-top:0px;padding-bottom: 0px;}
 #Language-Chooser{display:inline-block;}
+#Language-Chooser .language{top:5px;position: relative;}
 #Footer a i,
 #Form-Chooser,
 #Thanks{font-size:150%;}
